; ModuleID = '/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_clone_detach.c'
source_filename = "/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_clone_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTHREAD_CREATE_DETACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_clone_detach(i32* %0, i8* (i8*)* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8* (i8*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* (i8*)* %1, i8* (i8*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  store i32* %9, i32** %5, align 8
  br label %14

14:                                               ; preds = %13, %4
  %15 = call i32 @pthread_attr_init(i32* %10)
  %16 = load i32, i32* @PTHREAD_CREATE_DETACHED, align 4
  %17 = call i32 @pthread_attr_setdetachstate(i32* %10, i32 %16)
  %18 = load i32*, i32** %5, align 8
  %19 = load i8* (i8*)*, i8* (i8*)** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @vlc_clone_attr(i32* %18, i32* %10, i8* (i8*)* %19, i8* %20, i32 %21)
  ret i32 %22
}

declare dso_local i32 @pthread_attr_init(i32*) #1

declare dso_local i32 @pthread_attr_setdetachstate(i32*, i32) #1

declare dso_local i32 @vlc_clone_attr(i32*, i32*, i8* (i8*)*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
